installed jose for jwt

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,5 @@
 PORT=5000
 MONGO_URI=mongodb+srv://davifrigi:amor3009@jsts.hit8pyn.mongodb.net/?appName=JSTS
+ADMIN_USERNAME=admin
+ADMIN_PASSWORD=admin
+SECRET_KEY=changeme
